최종 완성 코드

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,14 +13,14 @@
         <h1>HELLO SHOP</h1>
         <p class="lead">회원 기능</p>
         <P>
-            <a class="btn btn-lg btn-secondary" herf="/members/new">회원 가입</a>
-            <a class="btn btn-lg btn-secondary" herf="/members">회원 목록</a>
+            <a class="btn btn-lg btn-secondary" herf="/members/new" onclick="location.href='/members/new';return false;">회원 가입</a>
+            <a class="btn btn-lg btn-secondary" herf="/members" onclick="location.href='/members';return false;">회원 목록</a>
         </P>
 
         <p class="lead">상품 기능</p>
         <p>
-            <a class="btn btn-lg btn-dark" herf="/items/new">상품 등록</a>
-            <a class="btn btn-lg btn-dark" herf="/items">상품 목록</a>
+            <a class="btn btn-lg btn-dark" herf="/items/new" onclick="location.href='/items/new';return false;">상품 등록</a>
+            <a class="btn btn-lg btn-dark" herf="/items" onclick="location.href='/items';return false;">상품 목록</a>
         </p>
 
         <p class="lead">주문 기능</p>
