오류코드 수정 (미완)

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,14 +19,14 @@
 
         <p class="lead">상품 기능</p>
         <p>
-            <a class="btn btn-lg btn-dark" herf="/items/new" onclick="location.href='/items/new';return false;">상품 등록</a>
+            <a class="btn btn-lg btn-dark" herf="/item/new" onclick="location.href='/item/new';return false;">상품 등록</a>
             <a class="btn btn-lg btn-dark" herf="/items" onclick="location.href='/items';return false;">상품 목록</a>
         </p>
 
         <p class="lead">주문 기능</p>
         <p>
-            <a class="btn btn-lg btn-info" herf="/order">상품 주문</a>
-            <a class="btn btn-lg btn-info" herf="/items">주문 내역</a>
+            <a class="btn btn-lg btn-info" herf="/order" onclick="location.href='/order';return false;">상품 주문</a>
+            <a class="btn btn-lg btn-info" herf="/orders" onclick="location.href='/orders';return false;">주문 내역</a>
         </p>
     </div>
 
